--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -28,7 +28,9 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>25</java.version>
+		<java.version>21</java.version>
+		<maven.compiler.source>21</maven.compiler.source>
+         <maven.compiler.target>21</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -102,14 +104,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<source>
-						${java.version}
-					</source>
-					<target>
-						${java.version}
-						</target>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
