--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -86,7 +86,7 @@ jobs:
     
     - name: Build Backend Image
       run: |
-        docker build -t user-management-backend:latest ./monprojet
+        docker build -t user-management-backend:latest ./demo
     
     - name: Build Frontend Image
       run: |
