--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -24,3 +24,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
 spring.jpa.show-sql=true
 
+
+# Hugging Face API
+huggingface.api.token=yourtoken
+huggingface.api.url=https://api-inference.huggingface.co/models/google/flan-t5-large
